# OTLHelper

./: .gitignore  LICENSE  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: release-desktop.yml  upload-kcef-bundles.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/otlhelper/: ApiClient.kt  MainActivity.kt  OtlApp.kt  SessionManager.kt
app/src/main/java/com/example/otlhelper/core/auth/: AuthEvents.kt
app/src/main/java/com/example/otlhelper/core/cache/: CacheRetentionRunner.kt
app/src/main/java/com/example/otlhelper/core/designsystem/: DesignTokens.kt
app/src/main/java/com/example/otlhelper/core/feedback/: FeedbackModifiers.kt  FeedbackService.kt  FeedbackSounds.kt
app/src/main/java/com/example/otlhelper/core/lifecycle/: AppPresence.kt
app/src/main/java/com/example/otlhelper/core/media/: VideoCache.kt
app/src/main/java/com/example/otlhelper/core/metrics/: NetworkMetricsBuffer.kt  NetworkTypeDetector.kt
app/src/main/java/com/example/otlhelper/di/: AppModule.kt  DatabaseModule.kt
app/src/main/java/com/example/otlhelper/domain/: README.md
app/src/main/res/drawable/: bg_accent_divider.xml  bg_attachment_preview.xml  bg_bottom_sheet.xml  bg_drag_handle.xml  bg_input_bar.xml  bg_mol_card_error.xml  bg_mol_card_ok.xml  bg_poll_option_normal.xml  bg_poll_option_selected.xml  bg_scroll_down_btn.xml  bg_search_cat_glow.xml  bg_tab_pill_active.xml  bg_tab_pill_unread.xml  bg_warehouse_bar.xml  bg_warehouse_pill.xml  border_pinned.xml  border_presence_offline.xml  border_presence_online.xml  border_presence_paused.xml  card_glass.xml  ic_arrow_down.xml  ic_attachment.xml  ic_brand_mark.xml  ic_brand_mark_mono.xml  ic_splash_blank.xml  popup_menu_bg.xml  widget_counter_chip.xml  widget_home_bg.xml  widget_icon_bg.xml  widget_icon_tile.xml
app/src/main/res/layout/: activity_pc_qr_capture.xml  widget_home.xml
app/src/main/res/menu/: home_drawer_menu.xml
app/src/main/res/raw/: otl_vps_cert.pem
app/src/main/res/values/: colors.xml  ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  file_provider_paths.xml  widget_home_info.xml
desktop/: .gitignore  build.gradle.kts  proguard-rules.pro
desktop/icons/: app.icns
desktop/macro-helpers/: OtlSapHider.ahk
desktop/native/win/NativeUtils/: CMakeLists.txt  NativeUtils.cpp
desktop/src/main/kotlin/com/example/otlhelper/desktop/: BuildInfo.kt  Main.kt
desktop/src/main/resources/: cat.json  sap_detect_open.vbs  sap_open_clipboard.vbs
desktop/src/main/resources/win32-x86-64/: .gitkeep
docs/audit-2026-04-30/: ARCHITECTURE_AUDIT.md  BACKUP_VPS_DESIGN.md  BUILD_AND_RELEASE_AUDIT.md  CLEANUP_PLAN.md  HELPERS_AUDIT.md  NETWORK_ROUTE_AUDIT.md  PROJECT_MAP.md  REFACTOR_PLAN.md  ROUTE_MANAGER_DESIGN.md  SECURITY_AUDIT.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
shared/: README.md  build.gradle.kts
(+299 files in other folders)
